Fixed menu overflow issue

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -67,8 +67,9 @@ HEADER
     position: absolute;
     inset: 0;
     z-index: 100;
+    overflow: hidden;
 
-    transform: translateX(105vw);
+    transform: translateX(-100vw);
 
     &-backdrop {
       position: absolute;
